k8s/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  python-web-app
  namespace: python-web-app
  labels:
    app:  python-web-app
spec:
  selector:
    matchLabels:
      app: python-web-app
  replicas: 1
  template:
    metadata:
      labels:
        app:  python-web-app
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  python-web-app
        image: nitesh2611/python-web-app:latest
        ports:
        - containerPort:  5000
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
