k8s/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-web-svc
  namespace: python-web-app
spec:
  selector:
    app: python-web-app
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
