k8s/db-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-deployment
  namespace: python-web-app
  labels:
    app: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      name: postgresql
      labels:
        app: postgresql
    spec:
      containers:
        - name: python-pg-db
          image: nitesh2611/postgresql:latest
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          volumeMounts:
            - name: pgsql-data
              mountPath: /var/lib/pgsql
      volumes:
        - name: pgsql-data
          persistentVolumeClaim:
            claimName: pvc

---
apiVersion: v1
kind: Service
metadata:
  name: pg-service
  namespace: python-web-app
spec:
  selector:
    app: postgresql
  type: ClusterIP  
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
