k8s/db-service.yml
# postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgresql
spec:
  ports:
  - port: 5432
    name: postgres
  selector:
    app: postgresql
